force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/CPQ_Product_Attributes_Mapping__c.object-meta.xml
<CustomObject>
    <description>product attribute object to support Access internal processes when certain products may be sold in different variations while some of those variations are blocked.</description>
    <label>Product Attributes Mapping</label>
    <nameField>
        <label>Product Attributes Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attributes Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>