force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Billing_Frequency__c</fullName>
    <description>This field is used as to define the Billing Frequency of the product.</description>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>