force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Billing_Type__c</fullName>
    <description>This field is used as to define the Billing Type of the product.</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>