force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Commercial_Model__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Commercial_Model__c</fullName>
    <description>This field is used as to define the Commercial Model of the product.</description>
    <label>Commercial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_CommercialModel</valueSetName>
    </valueSet>
</CustomField>