force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Deployment_Contracted_Method__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Deployment_Contracted_Method__c</fullName>
    <description>This field is used as to define the deployment/contracted method of the product.</description>
    <label>Deployment/Contracted Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>PAYG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>