force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Deployment_Method__c</fullName>
    <description>This field is used as to define the deployment method of the product.</description>
    <label>Deployment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_Deployment_Method</valueSetName>
    </valueSet>
</CustomField>