force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Product_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Group_Type__c</fullName>
    <description>This field is used as to define the Product Group Type of the product.</description>
    <label>Product Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_Product_Group_Type</valueSetName>
    </valueSet>
</CustomField>