force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used as to define the Product Name of the product.</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Attributes Mappings</relationshipLabel>
    <relationshipName>Product_Attributes_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>