force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Revenue_Type__c</fullName>
    <description>This field is used as to define the Revenue Type of the product.</description>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_Revenue_Type</valueSetName>
    </valueSet>
</CustomField>