force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>CPQ_SKU_Code__c</fullName>
    <description>This field is used as to define the SKU code of the product.</description>
    <label>SKU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>