force-app/main/default/objects/CPQ_Product_Attributes_Mapping__c/fields/CPQ_Stock_Family__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Stock_Family__c</fullName>
    <description>This field is used as to define the Stock Family of the product.</description>
    <label>Stock Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_StockGroup</valueSetName>
    </valueSet>
</CustomField>